<resources>
    <string name="app_name">Pomodoro</string>

    <!--    timer fragment-->
    <string name="pomodoro_session">Session no.</string>
    <string name="pomodoro_pomodoro">Pomodoro no.</string>
    <string name="pomodoro_start_button">Start</string>

    <!--    notification channel-->
    <string name="channel_name">pomodoro_channel</string>
    <string name="channel_description">Here we\'ll show notifications about pomodoro sessions</string>

    <!--    navigation-->
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pomodoro</string>
    <string name="nav_header_subtitle">Łukasz Flisak</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_timer">Timer</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_flashcards">Flashcards</string>
    <string name="title_activity_add_task">AddTaskActivity</string>

    <!--    task fragment -->
    <string name="task_empty_list">Wow, such empty!</string>
    <!--    add new task-->
    <string name="task_title">Title</string>
    <string name="task_description">Description (optional)</string>
    <string name="task_priority">Priority</string>
    <string name="task_button">Add task</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Normal</item>
        <item>Urgent</item>
    </string-array>

    <!-- add new fragment -->
    <string name="flashcard_title_label">Question/title</string>
    <string name="flashcard_answer_label">Correct answer</string>
    <string name="flashcard_spinner_label">Group</string>
    <string name="flashcard_submit_btn">Add new flashcard</string>

    <!--  task bottom navigation-->
    <string name="remove_task_label">Delete task</string>
    <string name="mark_task_label">Mark task as complete</string>
    <string name="unmark_task_label">Mark task as unfinished</string>
    <string name="edit_task_label">Edit task</string>

    <!-- group bottom navigation -->
    <string name="remove_group_label">Remove group</string>
    <string name="rename_group_label">Change group name</string>

    <!-- flashcard bottom navigation -->
    <string name="remove_flashcard_label">Remove flashcard</string>
    <string name="edit_flashcard_label">Edit flashcard</string>

    <string name="close">close</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>

    <string name="add_group">Add new group</string>
    <string name="add_flashcard">Add new flashcard</string>

    <string name="new_group_label">Group name</string>
</resources>