<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_timer">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.pomodoro.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />
    <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.pomodoro.ui.timer.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />
    <fragment
        android:id="@+id/nav_flashcard"
        android:name="com.example.pomodoro.ui.flashcards.FlashcardsFragment"
        android:label="@string/menu_flashcards"
        tools:layout="@layout/fragment_flashcards" />

</navigation>